test/libhyperion/syntaxTests/nameAndTypeResolution/411_string_literal_not_convertible_to_address_as_return_value.hyp
// A previous implementation claimed the string would be an address
contract AddrString {
    function f() public returns (address) {
        return "ZCA35b7d915458EF540aDe6068dFe2F44E8fa733c";
   }
}
// ----
// TypeError 6359: (149-192): Return argument type literal_string "ZCA35b7d915458EF540aDe6068dFe2F44E8fa733c" is not implicitly convertible to expected type (type of first return variable) address.
